Feat/#66 (#74)
* Feat: without feat/#57

* Feat: added search logic for artist and song

* Feat: added Search API and updated swagger for it
