# docs/swagger.yaml
@@ -313,6 +313,34 @@ definitions:
       songReviewOptionId:
         type: integer
     type: object
+  handler.songSearchInfoResponse:
+    properties:
+      album:
+        type: string
+      singerName:
+        type: string
+      songId:
+        type: integer
+      songName:
+        type: string
+      songNumber:
+        type: integer
+    type: object
+  handler.songSearchInfoResponses:
+    properties:
+      artistName:
+        items:
+          $ref: '#/definitions/handler.songSearchInfoResponse'
+        type: array
+      songName:
+        items:
+          $ref: '#/definitions/handler.songSearchInfoResponse'
+        type: array
+      songNumber:
+        items:
+          $ref: '#/definitions/handler.songSearchInfoResponse'
+        type: array
+    type: object
   handler.versionCheckRequest:
     properties:
       version:
@@ -826,6 +854,42 @@ paths:
       summary: 새로고침 노래 추천
       tags:
       - Recommendation
+  /search/{searchKeyword}:
+    get:
+      consumes:
+      - application/json
+      description: 노래 검색 API, 노래 제목 또는 아티스트 이름을 검색합니다. \n 검색 결과는 노래 제목, 아티스트 이름, 앨범명,
+        노래 번호를 반환합니다.
+      parameters:
+      - description: 검색 키워드
+        in: path
+        name: searchKeyword
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 성공
+          schema:
+            allOf:
+            - $ref: '#/definitions/pkg.BaseResponseStruct'
+            - properties:
+                data:
+                  $ref: '#/definitions/handler.songSearchInfoResponses'
+              type: object
+        "400":
+          description: 실패 - 빈 리스트 반환
+          schema:
+            allOf:
+            - $ref: '#/definitions/pkg.BaseResponseStruct'
+            - properties:
+                data:
+                  type: object
+              type: object
+      summary: 노래 검색 API
+      tags:
+      - Search
   /song-review-options:
     get:
       consumes:
